# despatt

./: .gitignore  LICENSE  README-zh.md  README.md  index.md
cpp/: CMakeLists.txt
cpp/adapter/: Adapter.cpp  Adapter.h  CMakeLists.txt  Test.cpp
cpp/decorator/: CMakeLists.txt  Decorator.cpp  Decorator.h  Test.cpp
cpp/factory/: CMakeLists.txt  Factory.cpp  Factory.h  Test.cpp
cpp/iterator/: CMakeLists.txt  Iterator.cpp  Iterator.h  Test.cpp
cpp/mediator/: CMakeLists.txt  Mediator.cpp  Mediator.h  Test.cpp
cpp/observer/: CMakeLists.txt  Observer.cpp  Observer.h  ObserverFrame.cpp  ObserverFrame.h  Test.cpp
cpp/proxy/: CMakeLists.txt  Proxy.cpp  Proxy.h  Test.cpp
cpp/responsibility/: CMakeLists.txt  ResFrame.cpp  ResFrame.h  Responsibility.cpp  Responsibility.h  Test.cpp
cpp/singleton/: CMakeLists.txt  Test.cpp  singleton.cpp  singleton.h
cpp/state/: CMakeLists.txt  State.cpp  State.h  StateFrame.cpp  StateFrame.h  Test.cpp
global/: README-zh.md
global/01-observer/: README.md
global/02-adapter/: README.md
global/03-state/: README.md
global/04-singleton/: README.md
global/05-responsibility/: README.md
global/06-mediator/: README.md
global/07-Proxy/: README.md
global/08-decorator/: README.md
global/09-factory/: README.md
global/10-iterator/: README.md
global/20-life-v1/: README.md
global/25-realization/: README.md
global/basic/: 01-Observer.md  02-Adapter.md  03-State.md  04-Singleton.md  05-Responsibility.md  06 中介模式：找房子问中介.md  06-Mediator.md  07 代理模式：帮我拿一下快递.md  07-Proxy.md  08-Decorator.md  09-Factory.md  (+18 more)
go/: go.mod
(+49 files in other folders)
