CMAKE_MINIMUM_REQUIRED(VERSION 3.20)

PROJECT(despatt)

SET(CMAKE_CXX_STANDARD 11)

ADD_SUBDIRECTORY(singleton)
ADD_SUBDIRECTORY(factory)
ADD_SUBDIRECTORY(observer)
ADD_SUBDIRECTORY(adapter)
ADD_SUBDIRECTORY(state)
ADD_SUBDIRECTORY(responsibility)
ADD_SUBDIRECTORY(mediator)
ADD_SUBDIRECTORY(proxy)
